--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1319,6 +1319,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -14699,7 +14702,7 @@ Concentric</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="top_padding">10</property>
                                                             <property name="bottom_padding">10</property>
-                                                            <property name="left_padding">6</property>
+                                                            <property name="left_padding">4</property>
                                                             <property name="right_padding">6</property>
                                                             <child>
                                                             <widget class="GtkHBox" id="hbox80">
@@ -15869,7 +15872,7 @@ Concentric</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="border_width">4</property>
-                                                            <property name="label_xalign">0</property>
+                                                            <property name="label_xalign">0.004999999888241291</property>
                                                             <property name="shadow_type">in</property>
                                                             <child>
                                                             <widget class="GtkAlignment" id="alignment_encoder_capture_options">
@@ -19825,6 +19828,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
